# rag-eval-historical-newspapers

./: .gitignore  LICENSE  README.md
data/civil_war_confederate/: corpus.yaml  metadata.json
data/civil_war_union/: corpus.yaml  metadata.json
data/gold_rush/: corpus.yaml  metadata.json
data/great_depression/: corpus.yaml  metadata.json
data/prohibition_1920s/: corpus.yaml  metadata.json
data/spanish_flu_1918/: corpus.yaml  metadata.json
data/womens_suffrage/: corpus.yaml  metadata.json
data/wwi_american/: corpus.yaml  metadata.json
scripts/: Makefile  build_corpus.py  download_newspapers.py  pyproject.toml
