[project]
name = "historical-newspapers-scripts"
version = "0.1.0"
description = "Scripts to download historical newspapers from Chronicling America"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "bandit>=1.7.0",
    "types-tqdm>=4.66.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
